--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
     </style>
   </head>
   <body>
+    <button
+      id="toggleModel"
+      style="position: absolute; top: 10px; left: 10px; z-index: 20"
+    >
+      Hide Model
+    </button>
+
     <div id="container">
       <div id="app"></div>
       <div class="label" id="label1">🏠 Roof</div>
