--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
         transform: translate(-50%, -50%);
         white-space: nowrap;
         user-select: none;
-        z-index: 10;
+        z-index: 1;
+      }
+      canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1; /* 🔼 between image and labels */
       }
     </style>
   </head>
@@ -51,7 +57,7 @@
           left: 0;
           width: 100%;
           height: 100%;
-          object-fit: contain;
+          object-fit: cover;
           z-index: 0;
           pointer-events: none;
         "
