--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         width: 100%;
         height: 100%;
       }
+      canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 10;
+      }
       .label {
         position: absolute;
         background: rgba(255, 0, 0, 0.8);
@@ -30,43 +36,62 @@
         transform: translate(-50%, -50%);
         white-space: nowrap;
         user-select: none;
-        z-index: 1;
+        z-index: 20;
       }
-      canvas {
+      #frameViewer {
         position: absolute;
         top: 0;
         left: 0;
-        z-index: 1; /* 🔼 between image and labels */
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: 5;
+        pointer-events: none;
+      }
+      #loading-screen {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        z-index: 30;
+      }
+      #progress-bar-container {
+        width: 80%;
+        height: 10px;
+        background: #ccc;
+        margin-top: 10px;
+      }
+      #progress-bar {
+        height: 100%;
+        width: 0%;
+        background: #4caf50;
       }
     </style>
   </head>
   <body>
+    <div id="loading-screen">
+      <div id="loading-text">Loading... 0%</div>
+      <div id="progress-bar-container"><div id="progress-bar"></div></div>
+    </div>
+
     <button
       id="toggleModel"
-      style="position: absolute; top: 10px; left: 10px; z-index: 20"
+      style="position: absolute; top: 10px; left: 10px; z-index: 25"
     >
       Hide Model
     </button>
 
     <div id="container">
-      <img
-        id="frameViewer"
-        style="
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          z-index: 0;
-          pointer-events: none;
-        "
-      />
-
+      <img id="frameViewer" />
       <div id="app"></div>
       <div class="label" id="label1">🏠 Roof</div>
       <div class="label" id="label2">🚪 Door</div>
     </div>
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
