--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
     >
       Hide Model
     </button>
+    <input
+      id="stepInput"
+      type="number"
+      placeholder="Steps (0 = default)"
+      style="
+        position: absolute;
+        top: 10px;
+        left: 120px;
+        z-index: 25;
+        width: 180px;
+      "
+    />
 
     <div id="container">
       <img id="frameViewer" />
