--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         top: 0;
         left: 0;
         z-index: 10;
+        width: 100%;
+        height: 100%;
       }
       .label {
         position: absolute;
@@ -31,7 +33,7 @@
         color: white;
         padding: 4px 8px;
         border-radius: 4px;
-        font-size: 14px;
+        font-size: calc(12px + 0.5vw); /* Responsive font size */
         pointer-events: none;
         transform: translate(-50%, -50%);
         white-space: nowrap;
